crates/archon-tui-test-support/src/snapshots/archon_tui_test_support__insta_wrapper__error_toast.snap
---
source: crates/archon-tui-test-support/src/insta_wrapper.rs
expression: rendered
---










┌Error─────────────────────────────────────────────────────────────────────────┐
│connection refused                                                            │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
