crates/archon-tui-test-support/src/snapshots/archon_tui_test_support__insta_wrapper__inflight_agent.snap
---
source: crates/archon-tui-test-support/src/insta_wrapper.rs
expression: rendered
---
Agent: general-purpose (1234ms)
working...
