crates/archon-tui-test-support/src/snapshots/archon_tui_test_support__insta_wrapper__splash_screen.snap
---
source: crates/archon-tui-test-support/src/insta_wrapper.rs
expression: rendered
---
┌Archon────────────────────────────────────────────────────────────────────────┐
│                                    Archon                                    │
│                                 press any key                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
